# distributed-systems-labs

./: .gitignore  Dockerfile  docker-compose.yml  requirements.txt
app/: Dockerfile  deps.py  main.py  pyproject.toml
app/alembic/: env.py
app/alembic/versions/: be7ddf07183e_create_links_table.py  fb6d3baf208b_add_link_status.py
app/core/broker/: session.py
app/core/db/: models.py  session.py
app/crud/: link.py
app/endpoints/: link.py
app/schemas/: link.py
consumer/: Dockerfile  main.py  pyproject.toml
nginx/: Dockerfile  nginx.conf
