[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["evabronskayaa <eva27122002b@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
idna = "^3.4"
fastapi = "0.68.2"
pydantic = "1.10.13"
uvicorn = "0.15.0"
python-dotenv = "0.20.0"
sqlalchemy = "1.4.46"
psycopg2-binary = "2.9.3"
pika = "^1.3.2"
alembic = "1.7.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
